--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "create-react-app",
   "version": "5.0.0",
   "private": true,
+  "main": "public/electron.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "react-scripts build"
   },
   "dependencies": {
     "@emotion/react": "latest",
@@ -14,6 +19,7 @@
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^5.0.15",
     "axios": "^1.2.3",
+    "electron-is-dev": "^2.0.0",
     "moment": "^2.29.4",
     "react": "latest",
     "react-dom": "latest",
@@ -30,5 +36,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0",
+    "cross-env": "^7.0.3",
+    "electron": "^22.0.3",
+    "electron-builder": "^23.6.0",
+    "wait-on": "^7.0.1"
   }
 }
