--- a/package.json
+++ b/package.json
@@ -109,14 +109,18 @@
     }
   },
   "dependencies": {
+    "@apollo/client": "^3.7.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.11.6",
     "axios": "^1.2.4",
+    "dotenv": "^16.0.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
+    "electron-store": "^8.1.0",
     "electron-updater": "^5.2.3",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
