--- a/package.json
+++ b/package.json
@@ -113,10 +113,12 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "axios": "^1.2.4",
     "dotenv": "^16.0.3",
     "electron-debug": "^3.2.0",
+    "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.2.3",
