--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
+    "react-spinners": "^0.13.8",
     "youtube-dl-exec": "^2.1.11"
   },
   "devDependencies": {
