--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@types/validator": "^13.7.11",
     "axios": "^1.2.4",
     "dotenv": "^16.0.3",
     "electron-debug": "^3.2.0",
@@ -127,6 +128,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-spinners": "^0.13.8",
+    "validator": "^13.9.0",
     "youtube-dl-exec": "^2.1.11",
     "youtube-videos-uploader": "^2.0.9"
   },
