--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@mui/x-date-pickers": "^5.0.17",
     "@types/validator": "^13.7.11",
     "axios": "^1.2.4",
     "dotenv": "^16.0.3",
@@ -124,6 +125,7 @@
     "electron-store": "^8.1.0",
     "electron-updater": "^5.2.3",
     "graphql": "^16.6.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
