--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-spinners": "^0.13.8",
