--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "googleapis": "^110.0.0",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
+    "mui-color-input": "^1.0.4",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
