--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@mui/material": "^5.11.6",
     "@mui/x-date-pickers": "^5.0.17",
     "axios": "^1.2.4",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "electron-debug": "^3.2.0",
     "electron-is-dev": "^2.0.0",
@@ -128,6 +129,7 @@
     "google-auth-library": "^8.7.0",
     "googleapis": "^110.0.0",
     "graphql": "^16.6.0",
+    "html2canvas": "^1.4.1",
     "moment": "^2.29.4",
     "mui-color-input": "^1.0.4",
     "react": "^18.2.0",
